opam-version: "2.0"
synopsis: "Tailwind CSS standalone CLI on opam"
description: """Tailwind CSS standalone CLI on opam."""
maintainer: ["David Sancho"]
authors: ["David Sancho"]
license: "ISC"
homepage: "https://github.com/davesnx/opam-tailwindcss"
doc: "https://tmattio.github.io/opam-tailwindcss/"
bug-reports: "https://github.com/davesnx/opam-tailwindcss/issues"
dev-repo: "git+https://github.com/davesnx/opam-tailwindcss.git"
extra-source "tailwindcss-linux-arm64" {
  src: "https://github.com/davesnx/opam-tailwindcss/releases/download/%{version}%/tailwindcss-linux-arm64"
  checksum: []
}
extra-source "tailwindcss-linux-x64" {
  src: "https://github.com/davesnx/opam-tailwindcss/releases/download/%{version}%/tailwindcss-linux-x64"
  checksum: []
}
extra-source "tailwindcss-macos-arm64" {
  src: "https://github.com/davesnx/opam-tailwindcss/releases/download/%{version}%/tailwindcss-macos-arm64"
  checksum: []
}
extra-source "tailwindcss-macos-x64" {
  src: "https://github.com/davesnx/opam-tailwindcss/releases/download/%{version}%/tailwindcss-macos-x64"
  checksum: []
}
extra-source "tailwindcss-windows-x64.exe" {
  src: "https://github.com/davesnx/opam-tailwindcss/releases/download/%{version}%/tailwindcss-windows-x64.exe"
  checksum: []
}
extra-source "tailwindcss-windows-arm64.exe" {
  src: "https://github.com/davesnx/opam-tailwindcss/releases/download/%{version}%/tailwindcss-windows-arm64.exe"
  checksum: []
}
build: [
  ["chmod" "+x" "tailwindcss-linux-arm64"] {os = "linux" & arch = "arm64"}
  ["chmod" "+x" "tailwindcss-linux-x64"] {os = "linux" & arch = "x86_64"}
  ["chmod" "+x" "tailwindcss-macos-arm64"] {os = "macos" & arch = "arm64"}
  ["chmod" "+x" "tailwindcss-macos-x64"] {os = "macos" & arch = "x86_64"}
]
install: [
  "cp"
  "tailwindcss-linux-arm64" {os = "linux" & arch = "arm64"}
  "tailwindcss-linux-x64" {os = "linux" & arch = "x86_64"}
  "tailwindcss-macos-arm64" {os = "macos" & arch = "arm64"}
  "tailwindcss-macos-x64" {os = "macos" & arch = "x86_64"}
  "tailwindcss-windows-arm64.exe" {os = "win32" & arch = "arm64"}
  "tailwindcss-windows-x64.exe" {os = "win32" & arch = "x86_64"}
  "%{bin}%/tailwindcss" {os != "win32"}
  "%{bin}%/tailwindcss.exe" {os = "win32"}
]
available: [
  ( (os = "linux" & (arch = "x86_64" | arch = "arm64"))
  | (os = "macos" & (arch = "x86_64" | arch = "arm64"))
  | (os = "win32" & (arch = "x86_64" | arch = "arm64")))
]
